fixed jquery and placeholder on ie

--- a/content/stylesheet/application.css
+++ b/content/stylesheet/application.css
@@ -2376,3 +2376,7 @@ li.tumblr_post {
   line-height:150%;
 }
 
+
+.placeholder {
+  color: #999;
+}
